--- a/build.gradle
+++ b/build.gradle
@@ -35,6 +35,7 @@ dependencies {
 	runtimeOnly 'io.jsonwebtoken:jjwt-impl:0.11.5'
 	runtimeOnly 'io.jsonwebtoken:jjwt-jackson:0.11.5'
 	implementation 'jakarta.xml.bind:jakarta.xml.bind-api:4.0.0'
+	implementation "com.fasterxml.jackson.datatype:jackson-datatype-jsr310"
 
 	/** Lombok **/
 	compileOnly 'org.projectlombok:lombok'
