feat: Score 계산 함수 수정 및 yml 파일 기반 Score 전략 설정 기능 구현

--- a/build.gradle
+++ b/build.gradle
@@ -47,6 +47,8 @@ dependencies {
 	/** Development tools **/
 	developmentOnly 'org.springframework.boot:spring-boot-devtools'
 
+	annotationProcessor 'org.springframework.boot:spring-boot-configuration-processor'
+
 	/** Test **/
 	testImplementation 'org.springframework.boot:spring-boot-starter-test'
 	testRuntimeOnly 'org.junit.platform:junit-platform-launcher'
